--- a/style.css
+++ b/style.css
@@ -33,3 +33,29 @@ html, body {
 
 
 /* CALCULATOR */
+.app {
+    display: flex;
+
+    flex: 1;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    border: 2px solid red;
+}
+
+.calculator {
+    display: flex;
+    flex-direction: column;
+        
+    width: 450px;
+    height: 700px;
+
+    border: 2px solid red;
+}
+
+.number.button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
