--- a/style.css
+++ b/style.css
@@ -54,8 +54,11 @@ html, body {
     border: 2px solid red;
 }
 
-.number.button{
+.display {
     display: flex;
-    align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
+    align-items: flex-end;
+    background-color: grey;
+    flex: 1;
+    max-height: 100px;
 }
