added styling for the left and right section of buttons

--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ html, body {
     border: 2px solid red;
 }
 
+/* DISPLAY */
 .display {
     display: flex;
     flex-direction: column;
@@ -86,4 +87,29 @@ html, body {
     width: fit-content;
     max-height: 80px;
     border: 1px solid blue;
+}
+
+/* BTNS */
+.btns {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1;
+}
+
+/* LEFT BTNS */
+.left-btns {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
+/* RIGHT BTNS */
+.right-btns {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
