--- a/style.css
+++ b/style.css
@@ -94,17 +94,29 @@ html, body {
 /* BTNS */
 .btns {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
+    align-items: stretch;
     flex: 1;
+    border: 1px solid red;
 }
+
 
 .button {
     display: flex;
-    flex: 1;
-    text-align: center;
-    padding: 10px;
-    border-radius: 100%;
+    align-items: center;
+    justify-content: center;
+    flex: 1 1 100px;
+    border-radius: 50%;
     border: 1px solid black;
+    margin: 4px;
+    background-color: darkgrey;
+    color: white;
+    font-size: 48px;
+}
+
+.double {
+    display: flex;
+    flex: 2 1 200px;
 }
 
