added separate colors for the operations and extra misc buttons

--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ html, body {
     justify-content: center;
     align-items: stretch;
     flex: 1;
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 
 
